# LifeSimulator

./: CMakeLists.txt  CMakeLists.txt.user.a346841  CMakeLists.txt.user.d22c5fd  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Behavior/: Behavior.h
Behavior/CreturesExample/: AfraidCreatures.cpp  AfraidCreatures.h  AggressiveCreature.cpp  AggressiveCreature.h  DetaCreatures.cpp  DetaCreatures.h
FileSystemUtilits/: Deserialise.h  ISaveAndLoad.h  SerDeserSistem.cpp  SerDeserSistem.h  Serialise.h
GUI/: AreaWidget.cpp  AreaWidget.h  ArenaWidget.cpp  ArenaWidget.hpp  CentralWindow.cpp  CentralWindow.h  FildWidget.cpp  FildWidget.hpp  GeneratorsSettingWidget.cpp  GeneratorsSettingWidget.h  MainWindow.cpp  MainWindow.h  SettingWidget.cpp  SettingWidget.h  StatisticGraphics.cpp  StatisticGraphics.h  StatisticWidget.cpp  StatisticWidget.h  UpPanelWidget.cpp  UpPanelWidget.h
GUI/texture/: creature.xpm
Generators/: CreaturesGenerator.cpp  CreaturesGenerator.h  FoodGenerator.cpp  FoodGenerator.h
Generators/public/: CreateCreature.h  ICreatureGenerator.h  IFoodGenerator.h
MainModel/: MainModel.cpp  MainModel.h  MainModel.hpp
MainModel/Interface/: CreateCreature.h
MainModel/entity/: Creature.h  Creature.hpp  Food.cpp  Food.h  Food.hpp  Wall.cpp  Wall.h
MainModel/entity/public/: IDoingCreatures.h  IDrawingCreature.hpp  IOldingCreatures.h  (+3 more)
MainModel/public/: ArenaGraphic.h  CreateCreature.h  CreateFood.h  IOldingCreatures.hpp  SettingsGraphic.h
MainModel/struct/: Culture.h  StatisticData.h
Statistic/: HandlerStatistic.cpp  HandlerStatistic.h
(+6 files in other folders)
